# alpaca

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: example.rs
src/: blocklist.rs  commitment.rs  curve.rs  errors.rs  lib.rs  poseidon.rs  signature.rs  util.rs
src/hash/: constants.rs  mds.rs  mod.rs  permute.rs  poseidon.rs  sponge.rs
src/proofs/: mod.rs  utils.rs
src/proofs/relation_nova/: mod.rs  zksnark.rs
src/proofs/relation_nova/ivc/: f_circuit.rs  ivc.rs  mod.rs  r1cs_adapter.rs
src/proofs/relation_post/: mod.rs  zksnark.rs
src/traits/: blocklist.rs  commitment.rs  hash.rs  mod.rs  ro.rs  signature.rs
