[package]
name = "alpaca"
version = "0.1.0"
authors = ["Jiwon Kim <jiwonkp@umich.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasta_curves = "0.5.1"
rand = "0.8.4"
rand_core = "0.6"
generic-array = "1.0.0"
ff = "0.13"
num-bigint = "0.4.4"
thiserror = "1.0.58"
nova-snark = { version = "0.37.0", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
bellpepper-core = { version = "0.4.0", default-features = false }
bellpepper = { version = "0.4.0", default-features = false }
hex = { version = "0.4.3" }
neptune = { version = "13.0.0" }
log = { version = "0.4.21" }
circ = { path = "./circ-alpaca" }
circ_fields = { path = "circ-alpaca/circ_fields" }
spartan = { git = "https://github.com/jiwonkimpark/Spartan-pasta", branch = "pasta", default-features = false }
serde_json = { version = "1.0.117" }
group = { version = "0.13", default-features = false }
fxhash = { version = "0.2.1" }
rug = { version = "1.11", features = ["serde"] }
gmp-mpfr-sys = { version = "1.4" }
rayon = { version = "1.10.0" }
bincode = { version = "1.3.3", default-features = false }
lazy_static = { version = "1.5.0" }
flate2 = "1.0.34"

[features]
abomonation = []

[profile.dev]
overflow-checks = false # need to test after allowing overflow checks

[profile.release]
debug = true
